<resources>
    <string name="app_name">Fairy Forest Frenzy</string>
    
    <string name="sign_up_to_save_your_results">Sign Up to save your results</string>
    <string name="email">email</string>
    <string name="phone">phone</string>
    <string name="anonymous">anonymous</string>
    <string name="continue_not_java">Continue</string>
    <string name="enter_phone_to_save_your_results">Enter phone to save your results</string>
    <string name="phone_number_is_not_valid">Phone number is not valid</string>
    <string name="enter_email_to_save_your_results">Enter email to save your results</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="play_games">Play games</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="music">Music</string>
    <string name="vibration">Vibration</string>
    <string name="bonus_game">Bonus game</string>
    <string name="game_1">Game 1</string>
    <string name="play">Play</string>
    <string name="game_2">Game 2</string>
    <string name="win_placeholder">Win %d</string>
    <string name="balance_placeholder">Balance %d</string>
    <string name="spin">Spin</string>
    <string name="loading">Loading...</string>
    <string name="claim">Claim</string>
</resources>