<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/illustration_main_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_back"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_exit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="6dp"
        android:layout_marginStart="6dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_exit"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_play"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_gradient_pink"
        android:fontFamily="@font/moul"
        android:text="@string/play_games"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_vert" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_settings"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_gradient_pink"
        android:fontFamily="@font/moul"
        android:text="@string/settings"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_play" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_privacy"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_gradient_pink"
        android:fontFamily="@font/moul"
        android:text="@string/privacy"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_settings" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="270dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/illustration_girl_1_centered" />
</androidx.constraintlayout.widget.ConstraintLayout>