<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/illustration_main_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_back"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_view_exit"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_exit" />

    <com.sinaseyfi.advancedcardview.AdvancedCardView
        android:id="@+id/card_view_game_1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:background_ColorType="gradient_linear"
        app:background_Gradient_Color0="@color/black_80"
        app:background_Gradient_ColorEnd="@color/black_44"
        app:background_Type="fill_stroke"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/card_view_game_2"
        app:layout_constraintTop_toBottomOf="@id/image_view_back"
        app:stroke_ColorType="gradient_linear"
        app:stroke_Gradient_Color0="@color/gold"
        app:stroke_Gradient_Color1="@color/white_86"
        app:stroke_Gradient_ColorEnd="@color/gold"
        app:stroke_Width="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical"
                app:layout_constraintTop_toTopOf="@id/guideline_horizontal"
                app:srcCompat="@drawable/illustration_girl_1" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/moul"
                android:gravity="center"
                android:lineSpacingMultiplier="0.65"
                android:text="@string/game_1"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_gradient_pink"
                android:fontFamily="@font/moul"
                android:paddingHorizontal="40dp"
                android:paddingVertical="8dp"
                android:text="@string/play"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.85" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sinaseyfi.advancedcardview.AdvancedCardView>

    <com.sinaseyfi.advancedcardview.AdvancedCardView
        android:id="@+id/card_view_game_2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        app:background_ColorType="gradient_linear"
        app:background_Gradient_Color0="@color/black_80"
        app:background_Gradient_ColorEnd="@color/black_44"
        app:background_Type="fill_stroke"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_bonus_game"
        app:layout_constraintTop_toBottomOf="@id/card_view_game_1"
        app:stroke_ColorType="gradient_linear"
        app:stroke_Gradient_Color0="@color/gold"
        app:stroke_Gradient_Color1="@color/white_86"
        app:stroke_Gradient_ColorEnd="@color/gold"
        app:stroke_Width="4dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.15" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_horizontal_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline_vertical_2"
                app:layout_constraintTop_toTopOf="@id/guideline_horizontal_2"
                app:srcCompat="@drawable/illustration_girl_2" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/moul"
                android:gravity="center"
                android:lineSpacingMultiplier="0.65"
                android:text="@string/game_2"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.17" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_play_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button_gradient_pink"
                android:fontFamily="@font/moul"
                android:paddingHorizontal="40dp"
                android:paddingVertical="8dp"
                android:text="@string/play"
                android:textAllCaps="false"
                app:backgroundTint="@null"
                app:cornerRadius="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.85" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.sinaseyfi.advancedcardview.AdvancedCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_bonus_game"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_button_gradient_pink"
        android:fontFamily="@font/moul"
        android:paddingVertical="8dp"
        android:text="@string/bonus_game"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>